fix: fix cke table alignment and header style - EXO-65716 - Meeds-io/MIPs#71
Prior to this change, table alignment is not wysiwyg and header font size is less than normal column.
THis PR adjusts the alignment in header style issue.

--- a/notes-webapp/src/main/webapp/skin/less/notes/editor.less
+++ b/notes-webapp/src/main/webapp/skin/less/notes/editor.less
@@ -112,16 +112,29 @@
       font-size: 16px !important;
     }
 
-    table, table tr, table tr td, table tr td {
+    table, table tr, table tr td {
       border: 1px solid !important;
       border-collapse: collapse !important;
+    }
+
+    table[align="center"] {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    table[align="left"] {
+      margin-right: auto;
+    }
+
+    table[align="right"] {
+      margin-left: auto;
     }
 
     table {
       margin-top: 0 !important;
       margin-bottom: 10px !important;
 
-      td {
+      td, th {
         line-height: 1.4 !important;
         font-size: 16px !important;
       }
